--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<link href="styles.css" rel="stylesheet" type="text/css" />
+<html lang="en" class= "fondot">
   <head>
     <charset="UTF-8">
   <meta name="viewport" content= width= dervice-width initial-scale:1.0> 
     <title>CatPhotoApp</title>
   </head>
-  <link href="styles.css" rel="stylesheet" type="text/css" />
+  
   <div class= fondo>
     <body >   
     <div class= fondotxt>
