--- a/index.html
+++ b/index.html
@@ -1,74 +1,115 @@
 <!DOCTYPE html>
-<link href="styles.css" rel="stylesheet" type="text/css" />
-<html lang="en" class= "fondot">
+<html>
   <head>
-    <charset="UTF-8">
-  <meta name="viewport" content= width= dervice-width initial-scale:1.0> 
-    <title>CatPhotoApp</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="styles.css">
+    <link rel="image" type="Image/jpg" href="fondo.jpeg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/jpg" href="ico.png" >
+    <title>Histora Medica</title>
   </head>
-  
-  <div class= fondo>
-    <body >   
-    <div class= fondotxt>
-      <h1>CatPhotoApp</h1>
-      <main>
-        <section>
-          <figure>
-            <h2>Cat Photos</h2>
-            <!-- TODO: Add link to cat photos -->
-            <p>Click here to view more <a target="_blank" href="https://freecatphotoapp.com">cat photos</a>.</p>
-            <a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
-          </figure>
-        </section>
-        <section>
-          <h2>Cat Lists</h2>
-          <h3>Things cats love:</h3>
-          <p>cat nip</p>
-          <p>laser pointers</p>
-          <p>lasagna</p>
-          <div class= .imgcenter>    
-        	  <figure class= centro>
-         	  <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
-          	<figcaption>Cats <em>love</em> lasagna.</figcaption>  
-        	</figure> 
-          </div>     
-          <h3>Top 3 things cats hate:</h3>
-          
-          <p>flea treatment</p>
-          <p>thunder</p>
-          <p>other cats</p>
-          
-          <div class= .imgcenter>
-            <figure class= centro>
-              <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
-              <figcaption>Cats <strong>hate</strong> other cats.</figcaption>  
-            </figure>
+  <body>
+    <div class="contenedor">
+      <header class="encabezado">
+        <div class="cabeza">
+         <a id="a" class="a" href="facebook.com"><img id="img" class="logo" src="https://w7.pngwing.com/pngs/85/416/png-transparent-round-red-and-white-cross-logo-illustration-medicine-health-care-euclidean-icon-red-cross-free-infographic-text-sign-thumbnail.png"></a>
+          <h1 class="title">Historia Medica</h1>
         </div>
-       </section>
-        <section>
-          <h2>Cat Form</h2>
-         <form action="https://freecatphotoapp.com/submit-cat-photo">
-            <fieldset>
-              <legend>Is your cat an indoor or outdoor cat?</legend>
-             <label><input id="indoor" type="radio" name="indoor-outdoor" value="indoor" checked> Indoor</label>
-             <label><input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor"> Outdoor</label>
-           </fieldset>
-           <fieldset>
-             <legend>What's your cat's personality?</legend>
-             <input id="loving" type="checkbox" name="personality" value="loving" checked> <label for="loving">Loving</label>
-             <input id="lazy" type="checkbox" name="personality" value="lazy"> <label for="lazy">Lazy</label>
-             <input id="energetic" type="checkbox" name="personality" value="energetic"> <label for="energetic">Energetic</label>
-            </fieldset>
-           <input type="text" name="catphotourl" placeholder="cat photo URL" required>
-            <button type="submit">Submit</button>
-          </form>
-       </section>
+       <nav class="nav">
+          <a class="boton" href="facebook.com"><li>CONTACTO</li></a>
+       </nav>
+      </header>
+     <main class="contenido">
+        <img class="img" src="https://lh3.googleusercontent.com/a-/AFdZucreZG1HAAjxFpn6IV8b45AD8LnVtx24GPRGiDRV=s83-c-mo"/>
+        <h1 class="name">Kevin Andres Zöller</h1>
+        <div class="datos1">
+          <p class="d">
+          <span class="d">Nacimento: </span>23/04/2022
+          </p>
+          <p class="d">
+          <span class="d">Sexo: </span>Masculino
+          </p>
+          <p class="d">
+          <span class="d">DNI: </span>********
+          </p>
+          <p class="d">
+          <span class="d">Grupo Sanguineo: </span>O-
+          </p>
+          <p class="d">
+          <span class="d">Dirección: </span>Filadelfia 1935
+          </p>
+          <p class="d">
+          <span class="d">Barrio: </span>Santa Isabel 1°era
+          </p>
+          <p class="d">
+          <span class="d">Telefono: </span>3512762270
+          </p>
+          <p class="d">
+          <span class="e">Correo: </span>
+          Kevinandreszoeller@gmail.com
+          </p>
+        </div>
      </main>
-     <footer>
-        <p>
-        No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>
-        </p>
-      </footer>
-   </body>
-  </div>
+     <aside class="Sidebar">
+      <div class="contacto">
+        <table>
+          <h3>Contacto de Emergencia</h3>
+          <tr>
+            <th>Dia:</th>
+            <td>(+54) 0351 755 3877</td>
+          </tr>
+          <tr>
+            <th>Noche:</th>
+            <td>(+54) 0351 755 3877</td>
+          </tr>
+        </table>
+      </div>
+      <div class="datos-medicos">
+        <table>
+          <h3>Enfermedades previas</h3>
+          <tr>
+            <td>Depresión Mayor</td>
+          </tr>
+          <tr>
+            <td>Ansiedad paroxistica episodica</td>
+          </tr>
+          <tr>
+          </tr>
+          <table>
+            <h3>Medicación</h3>
+            <tr>
+              <th>Medicamento</th>
+              <th>hora</th>
+            </tr>
+            <tr>
+              <td>Sertralina 50mg</td>
+              <td>7.30 AM</td>
+            </tr>
+            <tr>
+              <td>Risperidona 0.5mg</td>
+              <td>12.00 pm</td>
+            </tr>
+            <tr>
+              <td>Sertralina</td>
+              <td>8.00 pm</td>
+            </tr>
+            <tr>
+              <td>Risperidona</td>
+              <td>8.00 pm</td>
+            </tr>
+          </table>
+        </table>
+      </div>
+     </aside>
+     <div class="witget-1">
+        <h3>Witget 1</h3>
+     </div>
+     <div class="witget-2">
+       <h3>Witget 2</h3>
+     </div>
+     <footer class="pie">
+      <h3>footer</h3>
+     </footer>
+    </div>
+  </body>
 </html>
