--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
     <div class="contenedor">
       <header class="encabezado">
         <div class="cabeza">
-         <a id="a" class="a" href="facebook.com"><img id="img" class="logo" src="https://w7.pngwing.com/pngs/85/416/png-transparent-round-red-and-white-cross-logo-illustration-medicine-health-care-euclidean-icon-red-cross-free-infographic-text-sign-thumbnail.png"></a>
+          <a id="a" class="a" href="facebook.com"><img id="img" class="logo" src="https://w7.pngwing.com/pngs/85/416/png-transparent-round-red-and-white-cross-logo-illustration-medicine-health-care-euclidean-icon-red-cross-free-infographic-text-sign-thumbnail.png"></a>
           <h1 class="title">Historia Medica</h1>
         </div>
-       <nav class="nav">
-          <a class="boton" href="facebook.com"><li>CONTACTO</li></a>
-       </nav>
       </header>
      <main class="contenido">
+      <div class="perfil">
         <img class="img" src="https://lh3.googleusercontent.com/a-/AFdZucreZG1HAAjxFpn6IV8b45AD8LnVtx24GPRGiDRV=s83-c-mo"/>
-        <h1 class="name">Kevin Andres Zöller</h1>
+        <h1 class="name">Kevin Zöller</h1>
+      </div>
         <div class="datos1">
           <p class="d">
           <span class="d">Nacimento: </span>23/04/2022
@@ -68,12 +67,16 @@
         <table>
           <h3>Enfermedades previas</h3>
           <tr>
-            <td>Depresión Mayor</td>
+            <td>----------</td>
           </tr>
           <tr>
-            <td>Ansiedad paroxistica episodica</td>
+            <td>----------</td>
           </tr>
           <tr>
+            <td>----------</td>
+          </tr>
+          <tr>
+            <td>----------</td>
           </tr>
           <table>
             <h3>Medicación</h3>
@@ -82,33 +85,37 @@
               <th>hora</th>
             </tr>
             <tr>
-              <td>Sertralina 50mg</td>
-              <td>7.30 AM</td>
+              <td>----------</td>
+              <td>----------</td>
             </tr>
             <tr>
-              <td>Risperidona 0.5mg</td>
-              <td>12.00 pm</td>
+              <td>----------</td>
+              <td>----------</td>
             </tr>
             <tr>
-              <td>Sertralina</td>
-              <td>8.00 pm</td>
+              <td>----------</td>
+              <td>----------</td>
             </tr>
             <tr>
-              <td>Risperidona</td>
-              <td>8.00 pm</td>
+              <td>----------</td>
+              <td>----------</td>
             </tr>
           </table>
         </table>
+        <h3>Medicamentos contraindicados</h3>
+        <p>No presenta</p>
       </div>
      </aside>
      <div class="witget-1">
-        <h3>Witget 1</h3>
+        <h3>Alergias</h3>
+        <p>Leve alergia al polvo y al polen</p>
      </div>
      <div class="witget-2">
-       <h3>Witget 2</h3>
+       <h3>Recomendaciones</h3>
+       <p>Sin Recomendaciones</p>
      </div>
      <footer class="pie">
-      <h3>footer</h3>
+      <h3>Contactanos</h3>
      </footer>
     </div>
   </body>
