--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <table>
           <h3>Enfermedades previas</h3>
           <tr>
-            <td>----------</td>
+            <td>Ansiedad paroxistica episodica</td>
           </tr>
           <tr>
             <td>----------</td>
@@ -85,20 +85,20 @@
               <th>hora</th>
             </tr>
             <tr>
-              <td>----------</td>
-              <td>----------</td>
+              <td>Sertralina 50 mg</td>
+              <td>8.00 hs</td>
             </tr>
             <tr>
-              <td>----------</td>
-              <td>----------</td>
+              <td>Risperidona 0.5 mg</td>
+              <td>12.00 hs</td>
             </tr>
             <tr>
-              <td>----------</td>
-              <td>----------</td>
+              <td>Sertralina 50mg</td>
+              <td>20.30 hs</td>
             </tr>
             <tr>
-              <td>----------</td>
-              <td>----------</td>
+              <td>Riseridona 0.5 mg</td>
+              <td>20.30 hs</td>
             </tr>
           </table>
         </table>
