--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="styles.css">
-    <link rel="image" type="Image/jpg" href="fondo.jpeg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/jpg" href="ico.png" >
+    <link rel="icon" type="image/jpg" href="https://lh3.googleusercontent.com/EqN54WgWwOMvVvPc4P0YAG11SR2fV6QiE4pDynwNDFD6Jn8JS52vFucf6D0sVPIGk5zO_jRDoHI3SBmAlViJ0Mi9bC-fq8JQykF_TCj430VkQblxf3VFAS4xvDrMySuu4dJR4PI2wumjOv5wYAyC2l9IqBIJvryTYw3ylAGnPEdvakWPdb3ZF_k89YqZTmJY2bITAXMVmqGgjbjXfvoct0Mj83xlF531ZALnnlCJXtmZrCW9YmBwCpRq7WRymC4m2cpt1twLTVEd4g189LvGm7clcWzN27y5wrLp41uesD8BpgE0Lj_ys8h8vBNXNk3kmRQpWTUrev-eApAL6I_Dj_SMWTQ2yxgvDvvioZW-xkQ90exnf4mkvkMLjYc4lWSQDqXD99Ikx27EuFdB4LWPXK2711gjOBqbFbfkcny7uuKK9BV2SxlHeQ1dn7yIH1sJXl-OnntkUBkGz2VTXddrPlHyM3EkovmXuja4O2v6CUp9sVkCsRqXj9OeRSWtDKYiS8P-AoM6--0jHdvtygiygOgPtL5kxPcexzvuG5LLkNDq7sGWGFMET7TVsVXBFB5JPo2qDkSFNu5A18P1ErPnu22hRgtaRUFex213Cli0zxUU7tN66_jcdYIdyCN9zIv1n8wi2dQJt4moGR6_tMIzUQt81YzZqlFPAY7_JcW9o6dC2M_JehEig3c1zvckJwyCDniZ7thSyTv923i2up5l0t64pJmlZF-OnCn5k2PZdfTO_u2a6IHd617MFVWY0FRHiJzEhwtbeWHFwUJjQyAJH_M8chQmipor2ILGklp8D2z-yAw5Emc2026j1uFH-Aj-2Q1HkiO6brTfAy7DyrDXSCQyEvKIMZa01rygSg=s699-no?authuser=0" >
     <title>Histora Medica</title>
   </head>
   <body>
     <div class="contenedor">
       <header class="encabezado">
         <div class="cabeza">
-          <a id="a" class="a" href="facebook.com"><img id="img" class="logo" src="https://w7.pngwing.com/pngs/85/416/png-transparent-round-red-and-white-cross-logo-illustration-medicine-health-care-euclidean-icon-red-cross-free-infographic-text-sign-thumbnail.png"></a>
+          <a id="a" class="a" href="facebook.com"><img id="img" class="logo" src="https://lh3.googleusercontent.com/EqN54WgWwOMvVvPc4P0YAG11SR2fV6QiE4pDynwNDFD6Jn8JS52vFucf6D0sVPIGk5zO_jRDoHI3SBmAlViJ0Mi9bC-fq8JQykF_TCj430VkQblxf3VFAS4xvDrMySuu4dJR4PI2wumjOv5wYAyC2l9IqBIJvryTYw3ylAGnPEdvakWPdb3ZF_k89YqZTmJY2bITAXMVmqGgjbjXfvoct0Mj83xlF531ZALnnlCJXtmZrCW9YmBwCpRq7WRymC4m2cpt1twLTVEd4g189LvGm7clcWzN27y5wrLp41uesD8BpgE0Lj_ys8h8vBNXNk3kmRQpWTUrev-eApAL6I_Dj_SMWTQ2yxgvDvvioZW-xkQ90exnf4mkvkMLjYc4lWSQDqXD99Ikx27EuFdB4LWPXK2711gjOBqbFbfkcny7uuKK9BV2SxlHeQ1dn7yIH1sJXl-OnntkUBkGz2VTXddrPlHyM3EkovmXuja4O2v6CUp9sVkCsRqXj9OeRSWtDKYiS8P-AoM6--0jHdvtygiygOgPtL5kxPcexzvuG5LLkNDq7sGWGFMET7TVsVXBFB5JPo2qDkSFNu5A18P1ErPnu22hRgtaRUFex213Cli0zxUU7tN66_jcdYIdyCN9zIv1n8wi2dQJt4moGR6_tMIzUQt81YzZqlFPAY7_JcW9o6dC2M_JehEig3c1zvckJwyCDniZ7thSyTv923i2up5l0t64pJmlZF-OnCn5k2PZdfTO_u2a6IHd617MFVWY0FRHiJzEhwtbeWHFwUJjQyAJH_M8chQmipor2ILGklp8D2z-yAw5Emc2026j1uFH-Aj-2Q1HkiO6brTfAy7DyrDXSCQyEvKIMZa01rygSg=s699-no?authuser=0"></a>
           <h1 class="title">Historia Medica</h1>
         </div>
       </header>
