--- a/index.html
+++ b/index.html
@@ -84,20 +84,16 @@
               <th>hora</th>
             </tr>
             <tr>
-              <td>Sertralina 150 mg</td>
-              <td>22.00 hs</td>
+              <td>Venlafaxina 210mg</td>
+              <td>7.00 hs</td>
             </tr>
             <tr>
-              <td>Risperidona 2 mg</td>
-              <td>12.00 hs</td>
+              <td>Mirtazapina 30mg</td>
+              <td>20.00 hs</td>
             </tr>
             <tr>
-              <td>Sertralina 50mg</td>
-              <td>20.30 hs</td>
-            </tr>
-            <tr>
-              <td>Riseridona 0.5 mg</td>
-              <td>20.30 hs</td>
+              <td>Quetiapina 100mg</td>
+              <td>20.00 hs</td>
             </tr>
           </table>
         </table>
